--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ping2-me/php",
+    "name": "ping2me/php",
     "description": "Ping2me PHP client",
     "type": "library",
     "license": "MIT",
